@@ -1,5 +1,5 @@
 /**
- * Copyright © 2016-2019 The Thingsboard Authors
+ * Copyright © 2016-2021 The Thingsboard Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,29 +19,30 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 
-import java.nio.charset.Charset;
+import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.sql.Connection;
 import java.sql.DriverManager;
+import java.sql.SQLException;
 
 @Slf4j
 public abstract class SqlAbstractDatabaseSchemaService implements DatabaseSchemaService {
 
-    private static final String SQL_DIR = "sql";
+    protected static final String SQL_DIR = "sql";
 
     @Value("${spring.datasource.url}")
-    private String dbUrl;
+    protected String dbUrl;
 
     @Value("${spring.datasource.username}")
-    private String dbUserName;
+    protected String dbUserName;
 
     @Value("${spring.datasource.password}")
-    private String dbPassword;
+    protected String dbPassword;
 
     @Autowired
-    private InstallScripts installScripts;
+    protected InstallScripts installScripts;
 
     private final String schemaSql;
     private final String schemaIdxSql;
@@ -53,23 +54,43 @@ public abstract class SqlAbstractDatabaseSchemaService implements DatabaseSchema
 
     @Override
     public void createDatabaseSchema() throws Exception {
+        this.createDatabaseSchema(true);
+    }
 
+    @Override
+    public void createDatabaseSchema(boolean createIndexes) throws Exception {
         log.info("Installing SQL DataBase schema part: " + schemaSql);
+        executeQueryFromFile(schemaSql);
 
-        Path schemaFile = Paths.get(installScripts.getDataDir(), SQL_DIR, schemaSql);
-        try (Connection conn = DriverManager.getConnection(dbUrl, dbUserName, dbPassword)) {
-            String sql = new String(Files.readAllBytes(schemaFile), Charset.forName("UTF-8"));
-            conn.createStatement().execute(sql); //NOSONAR, ignoring because method used to load initial thingsboard database schema
+        if (createIndexes) {
+            this.createDatabaseIndexes();
         }
+    }
 
+    @Override
+    public void createDatabaseIndexes() throws Exception {
         if (schemaIdxSql != null) {
             log.info("Installing SQL DataBase schema indexes part: " + schemaIdxSql);
+            executeQueryFromFile(schemaIdxSql);
+        }
+    }
 
-            Path schemaIdxFile = Paths.get(installScripts.getDataDir(), SQL_DIR, schemaIdxSql);
-            try (Connection conn = DriverManager.getConnection(dbUrl, dbUserName, dbPassword)) {
-                String sql = new String(Files.readAllBytes(schemaIdxFile), Charset.forName("UTF-8"));
-                conn.createStatement().execute(sql); //NOSONAR, ignoring because method used to load initial thingsboard database schema
-            }
+    void executeQueryFromFile(String schemaIdxSql) throws SQLException, IOException {
+        Path schemaIdxFile = Paths.get(installScripts.getDataDir(), SQL_DIR, schemaIdxSql);
+        String sql = Files.readString(schemaIdxFile);
+        try (Connection conn = DriverManager.getConnection(dbUrl, dbUserName, dbPassword)) {
+            conn.createStatement().execute(sql); //NOSONAR, ignoring because method used to load initial thingsboard database schema
+        }
+    }
+
+    protected void executeQuery(String query) {
+        try (Connection conn = DriverManager.getConnection(dbUrl, dbUserName, dbPassword)) {
+            conn.createStatement().execute(query); //NOSONAR, ignoring because method used to execute thingsboard database upgrade script
+            log.info("Successfully executed query: {}", query);
+            Thread.sleep(5000);
+        } catch (InterruptedException | SQLException e) {
+            log.error("Failed to execute query: {} due to: {}", query, e.getMessage());
+            throw new RuntimeException("Failed to execute query: " + query, e);
         }
     }
 
